--- a/public/lobby.html
+++ b/public/lobby.html
@@ -1,106 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QuizVerse | Lobby</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-  <!-- ✅ Correct Supabase v2 CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <style>
-    body { font-family: 'Inter', sans-serif; background: linear-gradient(135deg,#4f46e5,#9333ea,#4f46e5); }
-    h1 { font-family: 'Bungee', cursive; }
-    .input-glow:focus { box-shadow: 0 0 15px rgba(255, 193, 7, 0.7); border-color: #fbbf24; }
-    .gradient-btn { background-size: 200% 200%; background-image: linear-gradient(270deg, #fbbf24, #ec4899, #8b5cf6, #fbbf24); animation: gradientShift 4s ease infinite; color:white; font-weight:bold; border-radius:12px; padding:0.5rem 1rem; cursor:pointer; transition:0.3s; }
-    .gradient-btn:hover { box-shadow:0 0 20px rgba(236,72,153,0.8); transform:scale(1.05);}
-    @keyframes gradientShift {0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;}}
-    .alert { position: fixed; top: 20px; right: 20px; background:#ec4899; color:white; padding:1rem 1.5rem; border-radius:8px; box-shadow:0 0 15px rgba(0,0,0,0.3); display:none; z-index:9999; font-weight:bold; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>QuizVerse | Lobby</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<link href="https://fonts.googleapis.com/css2?family=Bungee&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<style>
+body {
+  font-family: 'Inter', sans-serif;
+  background: linear-gradient(135deg,#4f46e5,#8b5cf6,#4f46e5);
+  min-height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  padding:2rem;
+  overflow-x:hidden;
+}
+h1 { font-family:'Bungee', cursive; }
+.glow-btn { box-shadow:0 0 15px rgba(255,215,0,0.8); transition:0.3s; }
+.glow-btn:hover { box-shadow:0 0 25px rgba(255,215,0,1); transform:scale(1.05); }
+.fade-up { opacity:0; transform:translateY(40px); transition: all 0.8s ease; }
+.fade-up.show { opacity:1; transform:translateY(0); }
+#toast { position:fixed; bottom:1rem; right:1rem; display:flex; flex-direction:column; gap:0.5rem; z-index:50; }
+.avatar-bounce { animation: floatAvatar 3s ease-in-out infinite; transition: transform 0.3s; }
+@keyframes floatAvatar { 0%,100%{transform:translateY(0);} 50%{transform:translateY(-10px);} }
+.animate-gradient { background-size: 200% 200%; background-clip:text; -webkit-background-clip:text; color:transparent; animation: gradientMove 4s ease infinite; }
+@keyframes gradientMove { 0%{background-position:0% 50%;} 50%{background-position:100% 50%;} 100%{background-position:0% 50%;} }
+.backdrop-card { background: rgba(255,255,255,0.05); backdrop-filter: blur(15px); border-radius: 1rem; padding:2rem; box-shadow:0 0 30px rgba(0,0,0,0.4); transition:0.3s; }
+.backdrop-card:hover { box-shadow:0 0 50px rgba(255,255,255,0.2); }
+input:focus { outline:none; border:2px solid #fbbf24; }
+.overlay {
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,0.7);
+  backdrop-filter:blur(5px);
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  color:white;
+  font-size:1.5rem;
+  font-weight:bold;
+  z-index:100;
+  display:none;
+}
+</style>
 </head>
-<body class="min-h-screen flex flex-col items-center justify-center px-4 text-white">
+<body>
 
-  <h1 class="text-4xl font-bold mb-6 text-transparent bg-clip-text bg-gradient-to-r from-amber-400 via-pink-500 to-purple-500">🎮 QuizVerse Lobby</h1>
+<div id="loading" class="text-white text-center text-xl fade-up">⏳ Checking session...</div>
 
-  <div class="bg-white text-gray-900 p-6 rounded-2xl shadow-xl w-full max-w-md space-y-4">
-    <div>
-      <label class="block font-semibold mb-1">Create Room</label>
-      <input type="text" id="create-room-code" placeholder="Enter room code (optional)" class="w-full px-4 py-2 rounded-lg border border-gray-300 input-glow mb-2">
-      <button id="create-room-btn" class="gradient-btn w-full">Create Room</button>
+<div id="app" style="display:none;" class="max-w-xl w-full space-y-8 fade-up">
+
+  <!-- Lobby Card -->
+  <div class="backdrop-card text-center space-y-6">
+    <h1 class="text-5xl font-bold animate-gradient">🎮 QuizVerse Lobby</h1>
+
+    <!-- Floating Avatars -->
+    <div class="flex justify-center gap-4 mb-4">
+      <img src="https://api.dicebear.com/7.x/fun-emoji/svg?seed=Ace" class="w-16 h-16 rounded-full avatar-bounce hover:scale-110">
+      <img src="https://api.dicebear.com/7.x/fun-emoji/svg?seed=Nova" class="w-16 h-16 rounded-full avatar-bounce hover:scale-110">
+      <img src="https://api.dicebear.com/7.x/fun-emoji/svg?seed=Luna" class="w-16 h-16 rounded-full avatar-bounce hover:scale-110">
     </div>
 
-    <div>
-      <label class="block font-semibold mb-1">Join Room</label>
-      <input type="text" id="join-room-code" placeholder="Enter room code" class="w-full px-4 py-2 rounded-lg border border-gray-300 input-glow mb-2">
-      <button id="join-room-btn" class="gradient-btn w-full">Join Room</button>
+    <!-- Live Player Count -->
+    <p id="player-count" class="text-teal-300 font-semibold animate-pulse">🎮 Loading players...</p>
+
+    <!-- Create Room -->
+    <div class="flex flex-col sm:flex-row justify-center items-center gap-3">
+      <button id="createRoomBtn" class="glow-btn px-6 py-3 bg-pink-500 rounded-full text-white font-bold hover:bg-pink-600 transition">
+        👑 Create Room
+      </button>
+      <span id="roomCode" class="font-mono text-2xl text-teal-300"></span>
+      <button id="copyBtn" class="px-4 py-2 bg-green-500 rounded-full text-white font-semibold hover:bg-green-600 transition hidden">
+        📋 Copy
+      </button>
     </div>
 
-    <button id="logout-btn" class="gradient-btn w-full bg-red-500 hover:bg-red-600 mt-4">Logout</button>
+    <!-- Join Room -->
+    <div class="flex flex-col sm:flex-row justify-center items-center gap-3">
+      <input type="text" id="joinInput" placeholder="Enter Room Code" class="px-4 py-2 rounded-full text-black text-center w-48 sm:w-60 shadow-md focus:ring-2 focus:ring-amber-400" />
+      <button id="joinRoomBtn" class="glow-btn px-6 py-3 bg-blue-500 rounded-full text-white font-bold hover:bg-blue-600 transition">
+        🔗 Join Room
+      </button>
+    </div>
+
+    <!-- Logout -->
+    <button id="logoutBtn" class="px-6 py-3 bg-gray-700 rounded-full text-white font-semibold hover:bg-gray-600 transition mt-4">
+      🚪 Logout
+    </button>
   </div>
 
-  <div id="alert" class="alert"></div>
+</div>
 
-  <!-- Config file should define window.supabaseConfig = { url: "...", key: "..." } -->
-  <script src="config.js"></script>
-  <script>
-    // ✅ Initialize Supabase client correctly
-    const client = supabase.createClient(window.supabaseConfig.url, window.supabaseConfig.key);
+<div id="toast"></div>
+<div id="overlay" class="overlay">⏳ Creating Room...</div>
 
-    let currentUser = null;
+<script src="config.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+<script>
+  const supabase = window.supabase.createClient(window.SUPABASE_URL, window.SUPABASE_KEY);
+  let lastRoomCode = "";
+  let playerCount = Math.floor(Math.random()*500)+200;
 
-    // ✅ Get current user session
-    (async () => {
-      const { data, error } = await client.auth.getSession();
-      if (!data.session) {
-        window.location.href = 'login.html';
-      } else {
-        currentUser = data.session.user;
-      }
-    })();
+  function showToast(message, type="info"){
+    const toast = document.createElement("div");
+    toast.className = "px-4 py-2 rounded-xl shadow text-white transition " + 
+      (type==="error"?"bg-red-500": type==="success"?"bg-green-500":"bg-blue-500");
+    toast.textContent = message;
+    document.getElementById("toast").appendChild(toast);
+    setTimeout(()=>toast.remove(),3000);
+  }
 
-    // ✅ Reusable alert
-    function showAlert(msg, color="#ec4899"){
-      const alertBox = document.getElementById('alert');
-      alertBox.innerText = msg;
-      alertBox.style.background = color;
-      alertBox.style.display = 'block';
-      setTimeout(()=>alertBox.style.display='none',3000);
+  async function checkSession(){
+    const { data } = await supabase.auth.getSession();
+    if(data.session) showLobby();
+    else supabase.auth.onAuthStateChange((_event, session)=>{
+      if(session) showLobby();
+      else window.location.href="login.html";
+    });
+  }
+
+  function showLobby(){
+    document.getElementById("loading").style.display="none";
+    document.getElementById("app").style.display="block";
+    document.querySelectorAll('.fade-up').forEach(el => el.classList.add('show'));
+    const el = document.getElementById("player-count");
+    el.textContent = `🎮 ${playerCount} players in-game`;
+    setInterval(()=>{
+      const change = Math.floor(Math.random()*5)-2;
+      playerCount = Math.max(50, playerCount + change);
+      el.textContent = `🎮 ${playerCount} players in-game`;
+    },3000);
+  }
+
+  // Create room
+  document.getElementById("createRoomBtn").addEventListener("click", async ()=>{
+    const overlay = document.getElementById("overlay");
+    overlay.style.display = "flex";
+    const { data:{user} } = await supabase.auth.getUser();
+    if(!user){
+      overlay.style.display = "none";
+      return showToast("Not logged in","error");
     }
 
-    // ✅ Create Room
-    document.getElementById('create-room-btn').addEventListener('click', async ()=>{
-      let code = document.getElementById('create-room-code').value.trim();
-      if(!code) code = Math.random().toString(36).substring(2,8).toUpperCase();
+    const code = Math.random().toString(36).substring(2,8).toUpperCase();
+    const { data, error } = await supabase.from("rooms").insert([{ room_code: code, host_id: user.id, quiz_status:"waiting" }]).select();
+    overlay.style.display = "none";
+    if(error || !data) return showToast("Create room failed","error");
 
-      if (!currentUser) return showAlert('User not loaded yet! Please try again.');
+    lastRoomCode = code;
+    document.getElementById("roomCode").innerText = code;
+    document.getElementById("copyBtn").style.display="inline-block";
+    confetti({ particleCount: 120, spread: 80, origin: { y: 0.6 } });
+    showToast("Room created: "+code,"success");
+  });
 
-      const { data, error } = await client.from('rooms').insert([
-        { room_code: code, host_id: currentUser.id, quiz_status: 'waiting' }
-      ]);
-      if(error) return showAlert('Error creating room: '+error.message);
-      showAlert(`Room created! Code: ${code}`, '#22c55e');
-      confetti({ particleCount:100, spread:70, origin:{y:0.6} });
-      setTimeout(()=>location.href=`room.html?room=${code}`,1000);
-    });
+  // Copy code
+  document.getElementById("copyBtn").addEventListener("click", ()=>{
+    if(!lastRoomCode) return showToast("No code to copy","error");
+    navigator.clipboard.writeText(lastRoomCode)
+      .then(()=>showToast("Room code copied!","success"))
+      .catch(()=>showToast("Copy failed","error"));
+  });
 
-    // ✅ Join Room
-    document.getElementById('join-room-btn').addEventListener('click', async ()=>{
-      const code = document.getElementById('join-room-code').value.trim();
-      if(!code) return showAlert('Enter a room code!');
+  // Join room
+  document.getElementById("joinRoomBtn").addEventListener("click", async ()=>{
+    const code = document.getElementById("joinInput").value.toUpperCase() || lastRoomCode;
+    if(!code) return showToast("Enter a room code","error");
 
-      const { data, error } = await client.from('rooms').select('*').eq('room_code', code).single();
-      if(error || !data) return showAlert('Room not found!');
-      showAlert(`Joining room: ${code}`, '#22c55e');
-      setTimeout(()=>location.href=`room.html?room=${code}`,800);
-    });
+    const { data, error } = await supabase.from("rooms").select("*").eq("room_code", code).single();
+    if(error || !data) return showToast("Room not found","error");
 
-    // ✅ Logout
-    document.getElementById('logout-btn').addEventListener('click', async ()=>{
-      const { error } = await client.auth.signOut();
-      if(error) return showAlert('Logout failed!');
-      window.location.href = 'login.html';
-    });
-  </script>
+    window.location.href=`waiting.html?room=${code}`;
+  });
+
+  // Logout
+  document.getElementById("logoutBtn").addEventListener("click", async ()=>{
+    await supabase.auth.signOut();
+    window.location.href="login.html";
+  });
+
+  checkSession();
+</script>
 </body>
 </html>
