--- a/public/waiting.html
+++ b/public/waiting.html
@@ -1,130 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QuizVerse | Waiting Room</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>QuizVerse | Waiting Room</title>
 
-  <style>
-    body { font-family: 'Inter', sans-serif; }
-    h1, h2 { font-family: 'Bungee', cursive; }
+<!-- TailwindCSS -->
+<script src="https://cdn.tailwindcss.com"></script>
+<!-- Confetti -->
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+<!-- Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Bungee&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 
-    /* Glowing room code */
-    .glow-text {
-      text-shadow: 0 0 10px rgba(255,255,255,0.8),
-                   0 0 20px rgba(255, 215, 0, 0.7),
-                   0 0 30px rgba(255, 105, 180, 0.6);
-    }
+<style>
+  body {
+    font-family:'Inter', sans-serif;
+    background: linear-gradient(135deg,#4f46e5,#8b5cf6,#4f46e5);
+    min-height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding:1rem;
+  }
 
-    /* Player join animation */
-    @keyframes popIn {
-      0% { transform: scale(0.8); opacity: 0; }
-      100% { transform: scale(1); opacity: 1; }
-    }
-    .player-card { animation: popIn 0.6s ease-out forwards; }
+  h1 {
+    font-family:'Bungee', cursive;
+    font-size:3rem;
+    background: linear-gradient(90deg,#facc15,#f43f5e,#22d3ee);
+    background-clip:text;
+    -webkit-background-clip:text;
+    color:transparent;
+    animation: gradientMove 4s ease infinite;
+    text-align:center;
+  }
+  @keyframes gradientMove {
+    0%{background-position:0% 50%;}
+    50%{background-position:100% 50%;}
+    100%{background-position:0% 50%;}
+  }
 
-    /* Floating avatars */
-    @keyframes floaty {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-6px); }
-    }
-    .floaty { animation: floaty 3s infinite ease-in-out; }
+  .backdrop-card {
+    background: rgba(0,0,0,0.6);
+    backdrop-filter: blur(15px);
+    padding:2rem;
+    border-radius:2rem;
+    box-shadow:0 0 50px rgba(0,0,0,0.5);
+    width:100%;
+    max-width:400px;
+    text-align:center;
+    position:relative;
+    overflow:hidden;
+  }
 
-    /* Pulsing Start button */
-    @keyframes pulseGlow {
-      0% { box-shadow: 0 0 10px rgba(255, 215, 0, 0.7); }
-      50% { box-shadow: 0 0 25px rgba(255, 105, 180, 1); }
-      100% { box-shadow: 0 0 10px rgba(255, 215, 0, 0.7); }
-    }
-    .pulse-btn { animation: pulseGlow 2s infinite; }
-  </style>
+  #roomCode {
+    font-family: monospace;
+    font-size:1.5rem;
+    color:#facc15;
+    margin-bottom:0.5rem;
+    animation: glowText 2s ease-in-out infinite alternate;
+  }
+  @keyframes glowText {
+    0% { text-shadow:0 0 5px #facc15; }
+    100% { text-shadow:0 0 20px #facc15; }
+  }
+
+  #players {
+    font-size:1.2rem;
+    font-weight:600;
+    color:#22d3ee;
+    animation:pulse 1.5s infinite;
+  }
+  @keyframes pulse {
+    0%,100%{opacity:1;}
+    50%{opacity:0.6;}
+  }
+
+  .glow-btn {
+    background: linear-gradient(90deg,#4ade80,#22d3ee);
+    color:white;
+    font-weight:bold;
+    border-radius:9999px;
+    padding:0.8rem 2rem;
+    box-shadow:0 0 20px rgba(34,211,238,0.6);
+    transition:0.3s;
+    cursor:pointer;
+    margin-top:1rem;
+  }
+  .glow-btn:hover {
+    box-shadow:0 0 40px rgba(34,211,238,1);
+    transform:scale(1.05);
+  }
+
+  .waiting-text {
+    color:#c4b5fd;
+    font-size:1rem;
+    margin-top:1rem;
+    animation: fadeIn 2s ease-in-out infinite alternate;
+  }
+  @keyframes fadeIn {
+    0%{opacity:0.5;}
+    100%{opacity:1;}
+  }
+</style>
 </head>
-<body class="bg-gradient-to-tr from-indigo-900 via-purple-800 to-indigo-900 text-white min-h-screen flex flex-col items-center justify-center px-6 py-10">
+<body>
 
-  <main class="max-w-4xl w-full space-y-10 text-center">
+<div class="backdrop-card fade-up">
+  <h1>⏳ Waiting Room</h1>
+  <p id="roomCode">ROOM123</p>
+  <p id="players">Players joined: 1</p>
+  <button id="startBtn" class="glow-btn hidden w-full">🚀 Start Game</button>
+  <p class="waiting-text">Waiting for other players...</p>
+</div>
 
-    <!-- Room Code -->
-    <section>
-      <h1 class="text-5xl font-extrabold mb-4">🚪 Waiting Room</h1>
-      <p class="text-lg text-gray-300">Share this code with your friends:</p>
-      <div id="room-code" class="mt-4 text-4xl font-bold glow-text">ABCD1234</div>
-    </section>
+<script src="config.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
+<script>
+  const supabase = window.supabase.createClient(window.SUPABASE_URL, window.SUPABASE_KEY);
+  const params = new URLSearchParams(window.location.search);
+  const room = params.get('room');
+  document.getElementById('roomCode').innerText = 'Room Code: ' + room;
 
-    <!-- Player List -->
-    <section>
-      <h2 class="text-2xl text-amber-400 mb-4">👥 Players Joined</h2>
-      <div id="players-list" class="grid sm:grid-cols-2 gap-6 justify-center">
-        <!-- Players will appear here -->
-      </div>
-    </section>
+  const startBtn = document.getElementById('startBtn');
+  let isHost = false;
 
-    <!-- Start Button -->
-    <section>
-      <button id="start-btn" class="bg-amber-500 hover:bg-amber-600 text-white font-bold text-2xl px-10 py-5 rounded-full shadow-lg pulse-btn transition-all">
-        🚀 Start Game
-      </button>
-    </section>
+  async function init() {
+    const { data:{user} } = await supabase.auth.getUser();
+    if(!user) return window.location.href='login.html';
 
-  </main>
+    const { data: roomData, error } = await supabase.from('rooms').select('*').eq('room_code', room).single();
+    if(error || !roomData) return alert('Room not found');
 
-  <script>
-    const playersList = document.getElementById("players-list");
-    const startBtn = document.getElementById("start-btn");
-
-    // Fake avatars for demo
-    const sampleAvatars = [
-      "https://api.dicebear.com/7.x/fun-emoji/svg?seed=Ace",
-      "https://api.dicebear.com/7.x/fun-emoji/svg?seed=Nova",
-      "https://api.dicebear.com/7.x/fun-emoji/svg?seed=Luna",
-      "https://api.dicebear.com/7.x/fun-emoji/svg?seed=Max",
-      "https://api.dicebear.com/7.x/fun-emoji/svg?seed=Zara",
-      "https://api.dicebear.com/7.x/fun-emoji/svg?seed=Kai"
-    ];
-
-    let playerCount = 0;
-
-    function addPlayer(username) {
-      const card = document.createElement("div");
-      card.className = "player-card bg-white text-gray-800 rounded-xl p-4 flex items-center gap-4 shadow-lg hover:scale-105 transition transform";
-
-      const img = document.createElement("img");
-      img.src = sampleAvatars[playerCount % sampleAvatars.length];
-      img.className = "w-14 h-14 rounded-full floaty";
-
-      const name = document.createElement("span");
-      name.className = "font-bold text-lg";
-      name.textContent = username;
-
-      card.appendChild(img);
-      card.appendChild(name);
-      playersList.appendChild(card);
-
-      // confetti burst
-      confetti({ particleCount: 80, spread: 60, origin: { y: 0.7 } });
-
-      playerCount++;
+    if(roomData.host_id === user.id){
+      isHost = true;
+      startBtn.classList.remove('hidden');
+    } else {
+      startBtn.textContent = "Waiting for host...";
+      startBtn.disabled = true;
     }
 
-    // Demo: add players automatically every 2s
-    const demoNames = ["Prince", "Piyush", "Nova", "Luna", "Zara", "Kai"];
-    let i = 0;
-    const interval = setInterval(() => {
-      if (i < demoNames.length) {
-        addPlayer(demoNames[i]);
-        i++;
-      } else {
-        clearInterval(interval);
+    fetchPlayerCount();
+    setInterval(fetchPlayerCount, 3000);
+    listenRoomStart();
+  }
+
+  async function fetchPlayerCount() {
+    const { data: players } = await supabase.from('room_players').select('*').eq('room_code', room);
+    const count = players ? players.length : 1;
+    document.getElementById('players').innerText = `Players joined: ${count}`;
+  }
+
+  startBtn.addEventListener('click', async () => {
+    if(!isHost) return;
+    await supabase.from('rooms').update({quiz_status:'started'}).eq('room_code', room);
+    confetti({ particleCount: 150, spread: 100, origin: { y: 0.6 } });
+    window.location.href = `game.html?room=${room}`;
+  });
+
+  async function listenRoomStart() {
+    setInterval(async () => {
+      const { data: roomData } = await supabase.from('rooms').select('quiz_status').eq('room_code', room).single();
+      if(roomData && roomData.quiz_status === 'started' && !isHost){
+        window.location.href = `game.html?room=${room}`;
       }
     }, 2000);
+  }
 
-    // Start button action
-    startBtn.addEventListener("click", () => {
-      confetti({ particleCount: 150, spread: 100, origin: { y: 0.6 } });
-      setTimeout(() => window.location.href = "game.html?room=ABCD1234", 1000);
-    });
-  </script>
+  init();
+</script>
+
 </body>
 </html>
